--- a/pages/index.html
+++ b/pages/index.html
@@ -2,35 +2,34 @@
 <html lang="es">
 
 <head>
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css">
-
 </head>
 
 <body>
     <header>
-        <div class="principal">
-            <div class="logo">
-                <img src="../img/logo.png" alt="Punto Ferretero">
-            </div>
-            <nav class="navbar">
-                <ul>
-                    <li><a class="nav-link" href="#">PRODUCTOS</a></li>
-                    <li><a class="nav-link" href="../pages/compras.html" target="_blank">HAGA SU PEDIDO</a></li>
-                    <li><a class="nav-link" href="#">CONTACTOS</a></li>
-                    <li><a class="nav-link" href="#">QUIENES SOMOS</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <div class="logo"><img src="../img/logo.png" alt="Punto Ferretero"></div>
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox" id="icon"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
+                </svg></label>
+            <ul>
+                <li><a class="nav-link" href="#">PRODUCTOS</a></li>
+                <li><a class="nav-link" href="../pages/compras.html" target="_blank">HAGA SU PEDIDO</a></li>
+                <li><a class="nav-link" href="#">CONTACTOS</a></li>
+                <li><a class="nav-link" href="#">QUIENES SOMOS</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="main-content">
 
