--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página</title>
+    <title>PUNTO FERRETERO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
@@ -24,16 +24,18 @@
                     </path>
                 </svg></label>
             <ul>
-                <li><a class="nav-link" href="#">PRODUCTOS</a></li>
-                <li><a class="nav-link" href="../pages/compras.html" target="_blank">HAGA SU PEDIDO</a></li>
-                <li><a class="nav-link" href="#">CONTACTOS</a></li>
-                <li><a class="nav-link" href="#">QUIENES SOMOS</a></li>
+                <li><a class="nav-link" href="../pages/productos.html">PRODUCTOS</a></li>
+                <li><a class="nav-link" href="../pages/listas-precios.html">LISTAS</a></li>
+                <li><a class="nav-link" href="../pages/pedidos.html" target="_blank">PEDIDOS</a></li>
+                <li><a class="nav-link" href="../pages/consultenos.html">CONSULTENOS</a></li>
             </ul>
         </nav>
     </header>
+
     <main class="main-content">
 
     </main>
+
     <div class="whatsapp-button">
         <a class="" href="https://wa.me/5493415450391?text=Hola..." target="_blank">
             <i class="fab fa-fw fa-whatsapp"></i>
@@ -44,9 +46,9 @@
             <p>NOSOTROS ! </p>
         </div>
     </div>
-    <main class="img"></main>
+
     <footer>
-        <p>&copy; 2025 Punto Ferretero</p>
+        <a class="nav-link" href="../pages/quienes-somos.html">&copy;2025 Punto Ferretero</a>
     </footer>
 </body>
 
