--- a/pages/index.html
+++ b/pages/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PUNTO FERRETERO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../img/logo.png">
+    <title>PUNTO FERRETERO</title>
 </head>
 
 <body>
@@ -22,19 +23,17 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
                     </path>
-                </svg></label>
+                </svg>
+            </label>
             <ul>
-                <li><a class="nav-link" href="../pages/productos.html">PRODUCTOS</a></li>
-                <li><a class="nav-link" href="../pages/listas-precios.html">LISTAS</a></li>
+                <li><a class="nav-link" href="../pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
                 <li><a class="nav-link" href="../pages/pedidos.html" target="_blank">PEDIDOS</a></li>
-                <li><a class="nav-link" href="../pages/consultenos.html">CONSULTENOS</a></li>
+                <li><a class="nav-link" href="../pages/consultenos.html" target="_blank">CONSULTENOS</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main-content">
-
-    </main>
+    <main class="main-content"></main>
 
     <div class="whatsapp-button">
         <a class="" href="https://wa.me/5493415450391?text=Hola..." target="_blank">
@@ -48,7 +47,7 @@
     </div>
 
     <footer>
-        <a class="nav-link" href="../pages/quienes-somos.html">&copy;2025 Punto Ferretero</a>
+        <a class="nav-link" href="../pages/quienes-somos.html" target="_blank">&copy;2025 Punto Ferretero</a>
     </footer>
 </body>
 
