--- a/pages/consultenos.html
+++ b/pages/consultenos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/logo.png">
-    <title>PEDIDOS</title>
+    <title>CONSULTENOS</title>
 </head>
 
 <body>
@@ -23,7 +23,8 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
                     </path>
-                </svg></label>
+                </svg>
+            </label>
             <ul>
                 <li><a class="nav-link" href="../pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
                 <li><a class="nav-link" href="../pages/pedidos.html" target="_blank">PEDIDOS</a></li>
