--- a/pages/consultenos.html
+++ b/pages/consultenos.html
@@ -34,7 +34,21 @@
     </header>
 
     <main class="main-content">
-
+        <div class="form">
+            <div class="form-group">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" placeholder="Tu nombre">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Tu email">
+            </div>
+            <div class="form-group">
+                <label for="comentario">Comentario:</label>
+                <textarea id="comentario" name="comentario" placeholder="Tu comentario"></textarea>
+            </div>
+            <button type="submit">Enviar</button>
+        </div>
     </main>
 
     <div class="whatsapp-button">
