change: main element

--- a/pages/consultenos.html
+++ b/pages/consultenos.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
 
-    <main class="main-content">
+    <main>
         <div class="form">
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
