--- a/pages/listas-precios.html
+++ b/pages/listas-precios.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
 
-    <main class="main-content">
+    <main>
         <h2>LISTAS DE PRECIOS</h2>
 
         <div class="container">
