--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
 
-    <main class="main-content">
+    <main>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur fuga voluptas tempora perferendis facilis
             quia similique ipsa quis, itaque id sed quas magni. Unde nemo nam maxime incidunt explicabo ratione?
