--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,8 @@
         href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css">
+
+
     <link rel="icon" href="../img/logo.png">
     <title>PUNTO FERRETERO</title>
 </head>
@@ -33,7 +35,7 @@
         </nav>
     </header>
 
-    <main class="main-content"></main>
+    <main></main>
 
     <div class="whatsapp-button">
         <a class="" href="https://wa.me/5493415450391?text=Hola..." target="_blank">
