--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="../img/logo.png">
+    <link rel="icon" href="../img/punto-ferretero-icon.svg">
     <title>PEDIDOS</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="../img/logo.png" alt="Punto Ferretero"></div>
+            <div class="logo"><img src="../img/punto-ferretero-icon.svg" alt="Punto Ferretero"></div>
             <input type="checkbox" id="checkbox">
             <label for="checkbox" id="icon"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
