--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../img/punto-ferretero-icon.svg">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/punto-ferretero-icon.svg">
     <title>QUIENES SOMOS</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="../img/punto-ferretero-icon.svg" alt="Punto Ferretero"></div>
+            <div class="logo"><img src="./img/punto-ferretero-icon.svg" alt="Punto Ferretero"></div>
             <input type="checkbox" id="checkbox">
             <label for="checkbox" id="icon"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
@@ -26,9 +26,9 @@
                 </svg>
             </label>
             <ul>
-                <li><a class="nav-link" href="../pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
-                <li><a class="nav-link" href="../pages/pedidos.html" target="_blank">PEDIDOS</a></li>
-                <li><a class="nav-link" href="../pages/consultenos.html" target="_blank">CONSULTENOS</a></li>
+                <li><a class="nav-link" href="./pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
+                <li><a class="nav-link" href="./pages/pedidos.html" target="_blank">PEDIDOS</a></li>
+                <li><a class="nav-link" href="./pages/consultenos.html" target="_blank">CONSULTENOS</a></li>
             </ul>
         </nav>
     </header>
@@ -160,7 +160,7 @@
     </div>
 
     <footer>
-        <a class="nav-link" href="../pages/index.html" target="_blank">&copy;2025 Punto Ferretero</a>
+        <a class="nav-link" href="./pages/index.html" target="_blank">&copy;2025 Punto Ferretero</a>
     </footer>
 </body>
 
