--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../img/punto-ferretero-icon.svg">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/punto-ferretero-icon.svg">
     <title>PUNTO FERRETERO</title>
 </head>
 
@@ -26,9 +26,9 @@
                 </svg>
             </label>
             <ul>
-                <li><a class="nav-link" href="../pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
-                <li><a class="nav-link" href="../pages/pedidos.html" target="_blank">PEDIDOS</a></li>
-                <li><a class="nav-link" href="../pages/consultenos.html" target="_blank">CONSULTENOS</a></li>
+                <li><a class="nav-link" href="./pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
+                <li><a class="nav-link" href="./pages/pedidos.html" target="_blank">PEDIDOS</a></li>
+                <li><a class="nav-link" href="./pages/consultenos.html" target="_blank">CONSULTENOS</a></li>
             </ul>
         </nav>
     </header>
@@ -47,7 +47,7 @@
     </div>
 
     <footer>
-        <a class="nav-link" href="../pages/quienes-somos.html" target="_blank">&copy;2025 Punto Ferretero</a>
+        <a class="nav-link" href="./pages/quienes-somos.html" target="_blank">&copy;2025 Punto Ferretero</a>
     </footer>
 </body>
 
