--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="../img/punto-ferretero-icon.svg" alt="Punto Ferretero"></div>
+            <div class="logo"><img src="./img/punto-ferretero-icon.svg" alt="Punto Ferretero"></div>
             <input type="checkbox" id="checkbox">
             <label for="checkbox" id="icon"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
