--- a/pages/consultenos.html
+++ b/pages/consultenos.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/img/punto-ferretero-icon.svg">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../img/punto-ferretero-icon.svg">
     <title>CONSULTENOS</title>
 </head>
 
