--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -26,9 +26,9 @@
                 </svg>
             </label>
             <ul>
-                <li><a class="nav-link" href="/pages/listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
-                <li><a class="nav-link" href="/pages/pedidos.html" target="_blank">PEDIDOS</a></li>
-                <li><a class="nav-link" href="/pages/consultenos.html" target="_blank">CONSULTENOS</a></li>
+                <li><a class="nav-link" href="./listas-precios.html" target="_blank">LISTAS DE PRECIOS</a></li>
+                <li><a class="nav-link" href="./pedidos.html" target="_blank">PEDIDOS</a></li>
+                <li><a class="nav-link" href="./consultenos.html" target="_blank">CONSULTENOS</a></li>
             </ul>
         </nav>
     </header>
@@ -160,7 +160,7 @@
     </div>
 
     <footer>
-        <a class="nav-link" href="/pages/index.html" target="_blank">&copy;2025 Punto Ferretero</a>
+        <a class="nav-link" href="/index.html" target="_blank">&copy;2025 Punto Ferretero</a>
     </footer>
 </body>
 
